feat: implement client-side gps command system and pathfinding infrastructure